--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <title>Document</title>
 </head>
-<body>
+<body class="work-sans-font">
+    <header class="header">
+       <div class="header-contant">
+         <nav class="navbar display-flex">
+            <h1 class="nav title">G3 Architects</h1>
+            <uL class="display-flex">
+                <li class="nav-item margin-right"><a class="nav-link text-gray"href="">home</a></li>
+                <li class="nav-item margin-right"><a class="nav-link text-gray"href="">About</a></li>
+                <li class="nav-item margin-right"><a class="nav-link text-gray"href="">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link text-gray"href="">login</a></li>
+            </uL>
+
+        </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h1 class="banner-title"> Brand New<br> Group of Architects </h1>
+            <p class="banner-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn btn-primary">Explore more</button>
+            </div>
+            <img class="banner-image" src="./images/banner.png" alt="">
+        </div>
+       </div>
+    </header>
     
     
 </body>
