--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
             <img class="banner-image" src="images/banner.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="team-container display-flex">
+            <div class="teams-image">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="guick-list"><span class="text-light-gray">Quick list </span><span class="of">of Our</span> <span class="f">Features</span></h3>
+                <p class="text-light-gray p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
 
     
     
