--- a/index.html
+++ b/index.html
@@ -44,6 +44,37 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <section class="features display-flex">
+            <div class="Features-div1">
+                <h3>Features you will love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="Dexktop-card">
+                    <h1>Dexktop & Mobile Version</h1>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="Drag-card">
+                    <h1>Drag & Drop Builder</h1>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="Awesome-card">
+                    <h1>Awesome Modern Design</h1>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="Super-card">
+                    <h1>Super Easy to Edit</h1>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+            <div class="section-image">
+                <img src="./images/architect.png" alt="">
+                <button class="speacial-btn"><span class="year">10+Year</span><br>
+<span class="exper">Experience</span></button>
+
+            </div>
+        </section>
+
+
     </main>
 
     
