--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="work-sans-font">
-     <header class="header bg-light">
+     <header class="header bg-light  ">
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
             <ul class="nav-links display-flex">
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section class="team-container display-flex">
+        <section class="  team-container display-flex ">
             <div class="teams-image">
                 <img src="./images/team1.png" alt="">
                 <img src="./images/team2.png" alt="">
@@ -44,7 +44,7 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <section class="features display-flex">
+        <section class="features display-flex ">
             <div class="Features-div1">
                 <h3>Features you will love & enjoy</h3>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
@@ -110,7 +110,7 @@
             </div>
 
         </section>
-        <section class="our sponspors">
+        <section class="our sponspors ">
             <div class="sponspors-info">
                 <h1 style="margin-bottom: 24px;" class="font-size-weight">Our Sponspors</h1>
                 <p  class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -128,7 +128,7 @@
 
 
     </main>
-    <footer>
+    <footer class="">
        <p style="font-size: 1rem;" class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 
